# wearable-ai

./: .env.example  .gitignore  CMakeLists.txt  README.md  create_systemd_services.sh  requirements.txt  setup.py
include/: audio_interface.h  custom_time.h  wearable.h
src/: hw_io.cpp  main.py  middleware.cpp  wearable.cpp
src/chatbot/: __init__.py
src/chatbot/core/: __init__.py  cli_interface.py  model_handler.py
src/chatbot/utils/: __init__.py  discord_handler.py
